--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -49,3 +49,8 @@
   background-color: #333;
   transform: scale(1.1);
 }
+.navbar-links a.active-link {
+  border-bottom: 2px solid white;
+  color: white;
+}
+
